--- a/pom.xml
+++ b/pom.xml
@@ -32,5 +32,12 @@
 			<version>3.17</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.12</version>
+			<scope>provided</scope>
+		</dependency>
+
 	</dependencies>
 </project>
